containers/litellm/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - litellm.example.com
        - webui.example.com
        - yakgpt.example.com
        - nextchat.example.com
        - chat.example.com
      secretName: litellm-tls
  rules:
    - host: litellm.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litellm
                port:
                  number: 4000
    - host: webui.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 8080
    - host: yakgpt.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yakgpt
                port:
                  number: 3000
    - host: nextchat.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextchat
                port:
                  number: 3000
    - host: chat.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-webui
                port:
                  number: 8080
